<resources>
    <string name="app_name">KotSalesAppH</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="name">Name</string>
    <string name="address">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
